<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sebito.restcrud.ContactoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <EditText
            android:id="@+id/edtUId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contacto_form_id"
            android:inputType="number"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/edtNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contacto_form_nombre"
            android:inputType="text"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/edtApellido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contacto_form_apellido"
            android:inputType="text"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contacto_form_email"
            android:importantForAutofill="no"
            android:inputType="text|textEmailAddress" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="#32CD32"
            android:text="@string/btn_save"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/btnDel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FF0000"
            android:text="@string/btn_del"
            android:textColor="#ffffff" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>